# Otus_vector_editor

./: CMakeLists.txt  CMakeLists.txt.in  Doxyfile  README.md  main.cpp
.github/workflows/: action.yml  cmake-multi-platform.yml  cmake-single-platform.yml
Documentation/html/: _base__shape_8h_source.html  _circle_8cpp.html  _circle_8h.html  _circle_8h_source.html  _controller_8h.html  _controller_8h_source.html  _export_8h.html  _export_8h_source.html  _export___import_8h.html  _export___import_8h_source.html  _import_8h.html  _import_8h_source.html  _model_8h.html  _model_8h_source.html  _rectangle_8h.html  _rectangle_8h_source.html  _text_box_8cpp.html  _text_box_8h.html  _text_box_8h_source.html  _view_8h.html  _view_8h_source.html  annotated.html  class_controller_1_1_document_controller-members.html  class_controller_1_1_document_controller.html  class_model_1_1_document_model-members.html  class_model_1_1_document_model.html  class_storage-members.html  class_storage.html  class_view_1_1_document_view-members.html  class_view_1_1_document_view.html  classes.html  dir_00920c664cb6c747222fbb782bd8b84f.html  dir_37ea0eae2889d180865b839786c7da06.html  dir_4897e8f140324156dc092d93a6fe80ec.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5c878092e0fc84e9ec68d194cabc16d2.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6974064bec986529c9a68c7c75e571af.html  dir_713acbf0246a22292b4b09ce6f71bf4b.html  (+26 more)
include/base_mvc/: Controller.h  Model.h  View.h
include/shapes/: Base_shape.h  Circle.h  Rectangle.h  (+1 more)
src/: ver.cpp
(+30 files in other folders)
